changes in headings

--- a/src/schedule.html
+++ b/src/schedule.html
@@ -17,17 +17,17 @@
   <title>M&K - Schedule</title>
 
   <meta charset="utf-8">
-  <meta property="og:title" content="M&K - Schedule" />
+  <meta property="og:title" content="A&M - Schedule" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://mayaandkeshal.com/schedule.html" />
-  <meta property="og:description" content="The wedding of Maya and Keshal" />
-  <meta property="og:image" content="http://mayaandkeshal.com/images/c-3-color.jpg" />
-  <meta property="fb:admins" content="prit4k" />
+  <meta property="og:url" content="http://aditiandmayank.com/schedule.html" />
+  <meta property="og:description" content="The wedding of Aditi and Mayank" />
+  <meta property="og:image" content="http://aditiandmayank.com/images/c-3-color.jpg" />
+  <meta property="fb:admins" content="mayank1559" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="description" content="The wedding of Maya and Keshal" />
-  <meta name="keywords" content="Wedding, Indian, Sri Lanka, India, Marriage, Wife, Husband">
-  <meta name="author" content="Pritak Patel">
+  <meta name="description" content="The wedding of Aditi and Mayank" />
+  <meta name="keywords" content="Wedding, Indian, Marriage, Wife, Husband">
+  <meta name="author" content="Aditi Gupta ">
 
 
   <!--[htmlclean-protect]-->
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="navbar-brand">
         <a id="logo" class="navbar-item" href="index.html">
-          <strong class="logo">Maya & Keshal</strong>
+          <strong class="logo">Aditi & Mayank</strong>
         </a>
         <div id="nav-toggle" class="navbar-burger">
           <span></span>
@@ -111,16 +111,16 @@
       <div class="columns">
         <br>
         <div id="schedule-1" class="column date is-4 is-offset-1 is-hidden-mobile has-text-right-tablet">
-          Monday, December 17th
+          Saturday, May 30th
         </div>
         <div id="schedule-2" class="column is-6">
           <div id="schedule-1" class="date is-hidden-tablet">
-            Monday, December 17th
+            Saturday, May 30th
             <br>
             <br>
           </div>
           <span class="event-name">
-            Mehendi + Sangeet </br>
+            Vows Exchange </br>
           </span>
           <span class="thin-grey">The Sanskrit word
             <i>sangeet</i> roughly translates to "sung together". Traditionally, this ceremony was meant for the female guests
@@ -132,25 +132,25 @@
             <br>
           </p>
           <div class="tags">
-            <span class="tag is-medium ">6pm onwards</span>
-            <span class="tag is-medium ">Anantara Lobby Lawn</span>
-            <span class="tag is-medium ">Colorful, festive attire</span>
+            <span class="tag is-medium ">11am - 12pm</span>
+            <span class="tag is-medium ">Providence City Hall</span>
+            <span class="tag is-medium ">Traditional Indian attire</span>
           </div>
         </div>
       </div>
       <br class="is-hidden-mobile">
       <div class="columns">
         <div id="schedule-1" class="column date is-4 is-offset-1 is-hidden-mobile has-text-right-tablet">
-          Tuesday, December 18th
+          Saturday, May 30th
         </div>
         <div id="schedule-2" class="column is-6">
           <div id="schedule-1" class="date is-hidden-tablet">
-            <br> Tuesday, December 18th
+            <br> Saturday, May 30th
             <br>
             <br>
           </div>
           <span class="event-name">
-            Baarat + Wedding</br>
+            Lunch</br>
           </span>
           <span class="thin-grey">This tradition signifies the groom traveling to the bride's home, accompanied by his family.
             For all you groomsmen, this is your chance to dance like nobody's watching (even though everybody's watching).
@@ -160,8 +160,8 @@
             <br>
           </p>
           <div class="tags">
-            <span class="tag is-medium ">3:30pm</span>
-            <span class="tag is-medium ">Anantara Lobby</span>
+            <span class="tag is-medium ">12:00pm onwards</span>
+            <span class="tag is-medium ">India Restaurant</span>
             <span class="tag is-medium ">Traditional Indian attire</span>
           </div>
 
@@ -170,7 +170,7 @@
           </p>
 
 
-          <span class="event-name">
+          <!-- <span class="event-name">
             Reception</br>
           </span>
           <span class="thin-grey">Take a break after the wedding, and meet us back at the front lawn of the Anantara for
@@ -225,7 +225,7 @@
         <br> For any questions and/or concerns please email
         <a href="mailto:hello@mayaandkeshal.com">hello@mayaandkeshal.com</a>
       </center>
-    </div>
+    </div> -->
   </section>
 
 
