--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,22 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-117162422-1');
-  </script>
+  </script> -->
 
 
 
@@ -19,15 +27,15 @@
   <meta charset="utf-8">
   <meta property="og:title" content="You are invited" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://mayaandkeshal.com" />
-  <meta property="og:description" content="The wedding of Maya and Keshal" />
+  <meta property="og:url" content="http://aditiandmayank.com" />
+  <meta property="og:description" content="The wedding of Aditi and Mayank" />
   <meta property="og:image" content="" />
-  <meta property="fb:admins" content="prit4k" />
+  <!-- <meta property="fb:admins" content="prit4k" /> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="description" content="The wedding of Maya and Keshal" />
-  <meta name="keywords" content="Wedding, Indian, Sri Lanka, India, Marriage, Wife, Husband">
-  <meta name="author" content="Pritak Patel">
+  <meta name="description" content="The wedding of Aditi and Mayank" />
+  <meta name="keywords" content="Wedding, Indian, Marriage, Wife, Husband">
+  <meta name="author" content="Aditi Gupta">
 
 
   <!--[htmlclean-protect]-->
