couple.html changes

--- a/src/faq.html
+++ b/src/faq.html
@@ -3,26 +3,34 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-117162422-1');
-  </script>
+  </script> -->
 
 
 
-  <title>M&K - FAQs</title>
+  <title>A&M - FAQs</title>
 
   <meta charset="utf-8">
-  <meta property="og:title" content="M&K - FAQs" />
+  <meta property="og:title" content="A&M - FAQs" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://mayaandkeshal.com/faq.html" />
-  <meta property="og:description" content="The wedding of Maya and Keshal" />
-  <meta property="og:image" content="http://mayaandkeshal.com/images/c-3-color.jpg" />
-  <meta property="fb:admins" content="prit4k" />
+  <meta property="og:url" content="http://aditiandmayank.com/faq.html" />
+  <meta property="og:description" content="The wedding of Aditi and Mayank" />
+  <meta property="og:image" content="http://aditiandmayank.com/images/c-3-color.jpg" />
+  <!-- <meta property="fb:admins" content="prit4k" /> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <meta name="description" content="The wedding of Maya and Keshal" />
@@ -114,59 +122,11 @@
 
           </br>
 
-
-          <strong class="faq-questions">I'd like to travel around Sri Lanka before/after the wedding. Do you have recommended
-            itineraries? </strong>
-          </br>
-          <p class="faq-text">
-            We've written a
-            <a href="https://drive.google.com/uc?export=view&id=1Sr8nVw5MMymwQrUkGw5JDueyDpIuIm0T" target="_blank">quick
-              guide
-            </a>, check it out! We also found this
-            <a href="https://www.nicobar.com/guide-sri-lanka-journey/" target="_blank">website</a> that's super helpful.</p>
-          </br>
-
-          <strong class="faq-questions">Where can I hire a car/shuttle/bus & driver to travel around Sri Lanka before/after
-            the wedding? </strong>
-          </br>
-          <p class="faq-text">
-            Please reach out to
-            <a href="mailto:kairosweddings@gmail.com">kairosweddings@gmail.com</a> and they can put you in touch with local
-            car shuttle companies.</p>
-          </br>
-
-          <strong class="faq-questions">Where can I find Indian clothes? </strong>
-          </br>
-          <p class="faq-text">
-            Beg, borrow, steal! If those don't work, here are a couple online options:
-            <br>
-            <br>
-            <a href="https://www.indianweddingsaree.com" target="_blank">indianweddingsaree.com</a> - Sells more than just
-            saris and they have readymade sizes you can choose from. But, buyer beware, if the item is surprisingly inexpensive,
-            it will not look as nice as it does in photos.
-            <br>
-            <br>
-            <a href="http://www.sareesaga.com" target="_blank">sareesaga.com</a> - They do custom sizing and other customizations.
-            Heard good things about this site.
-            <br>
-            <br> Other options:
-            <a href="https://www.cbazaar.com" target="_blank">cbazaar.com</a>,
-            <a href="https://www.kalkifashion.com" target="_blank">kalkifashion.com</a>
-          </p>
-          <br>
-          <strong class="faq-questions">Can I use credit card points to buy plane tickets? </strong>
-          </br>
-          <p class="faq-text">
-            <a href="http://www.awardhunt.com/" target="_blank">This website</a> tells you where you can get to with different
-            credit cards. We can't promise it will help, but maybe you'll find a deal!</p>
-          </br>
-          <br>
-          <br>
           <div class="is-size-7">
             <center>
-              Designed & developed with love by Pritak
+              Designed & developed with love by Aditi
               <br> For any questions and/or concerns please email
-              <a href="mailto:hello@mayaandkeshal.com">hello@mayaandkeshal.com</a>
+              <a href="mailto:gatech.mayank@gmail.com">gatech.mayank@gmail.com</a>
             </center>
           </div>
   </section>
