--- a/src/couple.html
+++ b/src/couple.html
@@ -3,30 +3,38 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-117162422-1');
-  </script>
+  </script> -->
 
 
-  <title>M&K - The Couple</title>
+  <title>A&M - The Couple</title>
 
   <meta charset="utf-8">
-  <meta property="og:title" content="M&K - The Couple" />
+  <meta property="og:title" content="A&M - The Couple" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://mayaandkeshal.com/couple.html" />
-  <meta property="og:description" content="The wedding of Maya and Keshal" />
-  <meta property="og:image" content="http://mayaandkeshal.com/images/c-3-color.jpg" />
-  <meta property="fb:admins" content="prit4k" />
+  <meta property="og:url" content="http://aditiandmayank.com/couple.html" />
+  <meta property="og:description" content="The wedding of Aditi and Mayank" />
+  <meta property="og:image" content="http://aditiandmayank.com/images/c-3-color.jpg" />
+  <!-- <meta property="fb:admins" content="prit4k" /> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <meta name="description" content="The wedding of Maya and Keshal" />
-  <meta name="keywords" content="Wedding, Indian, Sri Lanka, India, Marriage, Wife, Husband">
-  <meta name="author" content="Pritak Patel">
+  <meta name="keywords" content="Wedding, Indian, Marriage, Wife, Husband">
+  <meta name="author" content="Aditi Gupta">
 
 
   <!--[htmlclean-protect]-->
@@ -229,7 +237,7 @@
       <center>
         Designed & developed with love by Pritak
         <br> For any questions and/or concerns please email
-        <a href="mailto:hello@mayaandkeshal.com">hello@mayaandkeshal.com</a>
+        <a href="mailto:gatech.mayank@gmail.com">gatech.mayank@gmail.com</a>
       </center>
     </div>
   </section>
