--- a/src/faq.html
+++ b/src/faq.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="navbar-brand">
         <a id="logo" class="navbar-item" href="index.html">
-          <strong class="logo">Maya & Keshal</strong>
+          <strong class="logo">Aditi & Mayank</strong>
         </a>
         <div id="nav-toggle" class="navbar-burger">
           <span></span>
