--- a/src/schedule.html
+++ b/src/schedule.html
@@ -3,14 +3,22 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-117162422-1');
-  </script>
+  </script> -->
 
 
 
@@ -22,7 +30,7 @@
   <meta property="og:url" content="http://aditiandmayank.com/schedule.html" />
   <meta property="og:description" content="The wedding of Aditi and Mayank" />
   <meta property="og:image" content="http://aditiandmayank.com/images/c-3-color.jpg" />
-  <meta property="fb:admins" content="mayank1559" />
+  <!-- <meta property="fb:admins" content="mayank1559" /> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <meta name="description" content="The wedding of Aditi and Mayank" />
@@ -170,7 +178,7 @@
           </p>
 
 
-          <!-- <span class="event-name">
+          <span class="event-name">
             Reception</br>
           </span>
           <span class="thin-grey">Take a break after the wedding, and meet us back at the front lawn of the Anantara for
@@ -223,9 +231,9 @@
       <center>
         Designed & developed with love by Pritak
         <br> For any questions and/or concerns please email
-        <a href="mailto:hello@mayaandkeshal.com">hello@mayaandkeshal.com</a>
+        <a href="mailto:gatech.mayank@gmail.com">gatech.mayank@gmail.com</a>
       </center>
-    </div> -->
+    </div>
   </section>
 
 
