--- a/src/rsvp.html
+++ b/src/rsvp.html
@@ -136,7 +136,7 @@
     <br>
     <div class="is-size-7">
       <center>
-        Designed & developed with love by Aditi
+        Designed & developed with love by Pratik
         <br> For any questions and/or concerns please email
         <a href="mailto:gatech.mayank@gmail.com">gatech.mayank@gmail.com</a>
       </center>
