--- a/src/schedule.html
+++ b/src/schedule.html
@@ -22,7 +22,7 @@
 
 
 
-  <title>M&K - Schedule</title>
+  <title>A&M - Schedule</title>
 
   <meta charset="utf-8">
   <meta property="og:title" content="A&M - Schedule" />
@@ -172,64 +172,17 @@
             <span class="tag is-medium ">India Restaurant</span>
             <span class="tag is-medium ">Traditional Indian attire</span>
           </div>
-
-          <p style="line-height:0px;margin:21px;">
-            <br>
-          </p>
-
-
-          <span class="event-name">
-            Reception</br>
-          </span>
-          <span class="thin-grey">Take a break after the wedding, and meet us back at the front lawn of the Anantara for
-            dinner, drinks, and you guessed it... more dancing! </br>
-          </span>
-          <p style="line-height:0px;margin:-7px;">
-            <br>
-          </p>
-          <div class="tags">
-            <span class="tag is-medium ">8pm onwards</span>
-            <span class="tag is-medium ">Anantara Ballroom</span>
-            <span class="tag is-medium ">Dress to impress</span>
-          </div>
-        </div>
-
-
-      </div>
-      <br class="is-hidden-mobile">
-      <div class="columns">
-        <br>
-        <div id="schedule-1" class="column date is-4 is-offset-1 is-hidden-mobile has-text-right-tablet">
-          Wednesday, December 19th
-        </div>
-        <div id="schedule-2" class="column is-6">
-          <div id="schedule-1" class="date is-hidden-tablet">
-            Wednesday, December 19th
-            <br>
-            <br>
-          </div>
-          <span class="event-name">
-            Farewell Breakfast</br>
-          </span>
-          <span class="thin-grey">We'd love to see you before you head back home or onto your next adventure!</br>
-          </span>
-          <p style="line-height:0px;margin:-7px;">
-            <br>
-          </p>
-          <div class="tags">
-            <span class="tag is-medium ">8am - 11am</span>
-            <span class="tag is-medium ">Olu Restaurant</span>
-            <span class="tag is-medium ">PJs, reception attire, anything really</span>
-          </div>
         </div>
       </div>
       <br class="is-hidden-mobile">
+      <br>
+      <br>
       <br>
       <br>
     </div>
     <div class="is-size-7">
       <center>
-        Designed & developed with love by Pritak
+        Designed & developed with love by Pratik
         <br> For any questions and/or concerns please email
         <a href="mailto:gatech.mayank@gmail.com">gatech.mayank@gmail.com</a>
       </center>
