--- a/src/travel.html
+++ b/src/travel.html
@@ -218,7 +218,7 @@
     <br class="is-hidden-mobile">
     <div class="is-size-7">
       <center>
-        Designed & developed with love by Pritak
+        Designed & developed with love by Aditi
         <br> For any questions and/or concerns please email
         <a href="mailto:gatech.mayank@gmail.com">gatech.mayank@gmail.com</a>
       </center>
