--- a/src/couple.html
+++ b/src/couple.html
@@ -235,7 +235,7 @@
     </p>
     <div class="is-size-7">
       <center>
-        Designed & developed with love by Pritak
+        Designed & developed with love by Pratik
         <br> For any questions and/or concerns please email
         <a href="mailto:gatech.mayank@gmail.com">gatech.mayank@gmail.com</a>
       </center>
