--- a/src/faq.html
+++ b/src/faq.html
@@ -121,10 +121,18 @@
             (think: swim suits, sandals, breathable materials). </p>
 
           </br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
 
           <div class="is-size-7">
             <center>
-              Designed & developed with love by Aditi
+              Designed & developed with love by Pratik
               <br> For any questions and/or concerns please email
               <a href="mailto:gatech.mayank@gmail.com">gatech.mayank@gmail.com</a>
             </center>
