Update couple.html. Add variables in css

--- a/src/couple.html
+++ b/src/couple.html
@@ -13,81 +13,70 @@
   </script>
 
 
-  <title>M&K - The Couple</title>
+<title>You are invited</title>
 
-  <meta charset="utf-8">
-  <meta property="og:title" content="M&K - The Couple" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://mayaandkeshal.com/couple.html" />
-  <meta property="og:description" content="The wedding of Maya and Keshal" />
-  <meta property="og:image" content="http://mayaandkeshal.com/images/c-3-color.jpg" />
-  <meta property="fb:admins" content="prit4k" />
+<meta charset="utf-8">
+<meta property="og:title" content="You are invited" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://aditiandmayank.com" />
+<meta property="og:description" content="Wedding website of Aditi and Mayank" />
+<meta property="og:image" content="" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="description" content="The wedding of Maya and Keshal" />
-  <meta name="keywords" content="Wedding, Indian, Sri Lanka, India, Marriage, Wife, Husband">
-  <meta name="author" content="Pritak Patel">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+<meta name="description" content="Wedding website of Aditi and Mayank" />
+<meta name="keywords" content="Wedding, Indian, Simple Indian Wedding, India, Wedding website, Indian Wedding website">
+<meta name="author" content="Aditi Gupta and Mayank Agrawal">
 
 
-  <!--[htmlclean-protect]-->
-  <!-- inject:css -->
-  <!-- endinject -->
-  <!--[/htmlclean-protect]-->
-  <!--<Deject>-->
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/animate.css">
-  <!--</Deject>-->
+<!--[htmlclean-protect]-->
+<!-- inject:css -->
+<!-- endinject -->
+<!--[/htmlclean-protect]-->
+<!--<Deject>-->
+<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/fonts.css">
+<link rel="stylesheet" href="css/animate.css">
+<link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+<!--</Deject>-->
 </head>
 
 
 <body>
-  <div id="registry-modal" class="modal">
-    <div class="modal-background"></div>
-    <div class="modal-content animated bounceIn">
-      <div class="notification is-link">
-        <button id="modal-close" class="delete"></button>
-        Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
-        since we will be so far from home!
+<nav id="global-nav" class="navbar is-fixed-top is-transparent animated slideInDown">
+  <div class="container">
+    <div class="navbar-brand">
+      <a id="logo" class="navbar-item" href="index.html" :hover>
+        <strong class="logo">You are invited!</strong>
+      </a>
+      <div id="nav-toggle" class="navbar-burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <div id="main-menu" class="navbar-menu">
+      <div class="navbar-end">
+        <a class="menu-items-selected" href="couple.html">
+          <strong>The Couple</strong>
+        </a>
+        <a class="menu-items" href="schedule.html">
+          <strong>Schedule</strong>
+        </a>
+        <a class="menu-items" href="rsvp.html">
+          <strong>RSVP</strong>
+        </a>
+        <a class="menu-items" href="registry.html">
+          <strong>Registry</strong>
+        </a>
+        <a class="menu-items" href="faq.html">
+          <strong>FAQs</strong>
+        </a>
       </div>
     </div>
   </div>
-  <nav id="global-nav" class="navbar is-fixed-top is-transparent">
-    <div class="container">
-      <div class="navbar-brand">
-        <a id="logo" class="navbar-item" href="index.html">
-          <strong class="logo">Maya & Keshal</strong>
-        </a>
-        <div id="nav-toggle" class="navbar-burger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
-      <div id="main-menu" class="navbar-menu">
-        <div class="navbar-end">
-          <a class="navbar-item is-active" href="couple.html">
-            <strong class="tag is-size-6 is-link">The Couple</strong>
-          </a>
-          <a class="navbar-item" href="schedule.html">
-            <strong>Schedule</strong>
-          </a>
-          <a class="navbar-item" href="travel.html">
-            <strong>Travel & Accomodations</strong>
-          </a>
-          <a class="navbar-item" href="rsvp.html">
-            <strong>RSVP</strong>
-          </a>
-          <a class="navbar-item" id="registry-click">
-            <strong>Registry</strong>
-          </a>
-          <a class="navbar-item" href="faq.html">
-            <strong>FAQs</strong>
-          </a>
-        </div>
-      </div>
-    </div>
-  </nav>
+</nav>
 
   <section id="the-couple" class="hero quiz section is-fullheight">
     <div class="hero-body">
@@ -111,7 +100,7 @@
                 <p id="a5" class="control"></p>
                 <p id="a1" class="control">
                   <a class="box true">
-                    Spring break, Miami - cliché, we know
+                    Spring break, Miami - cliché, we know. It was amazing
                   </a>
                 </p>
                 <p id="a2" class="control">
