--- a/couple.html
+++ b/couple.html
@@ -3,91 +3,87 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-117162422-1');
-  </script>
+  </script> -->
 
 
-  <title>A&M - The Couple</title>
+<title>You are invited</title>
 
-  <meta charset="utf-8">
-  <meta property="og:title" content="A&M - The Couple" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://aditiandmayank.com/couple.html" />
-  <meta property="og:description" content="The wedding of Aditi and Mayank" />
-  <meta property="og:image" content="http://aditiandmayank.com/images/c-3-color.jpg" />
-  <meta property="fb:admins" content="prit4k" />
+<meta charset="utf-8">
+<meta property="og:title" content="You are invited" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://aditiandmayank.com" />
+<meta property="og:description" content="Wedding website of Aditi and Mayank" />
+<meta property="og:image" content="" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="description" content="The wedding of Aditi and Mayank" />
-  <meta name="keywords" content="Wedding, Indian, Marriage, Wife, Husband">
-  <meta name="author" content="Pritak Patel">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+<meta name="description" content="Wedding website of Aditi and Mayank" />
+<meta name="keywords" content="Wedding, Indian, Simple Indian Wedding, India, Wedding website, Indian Wedding website">
+<meta name="author" content="Aditi Gupta and Mayank Agrawal">
 
-
-  <!--[htmlclean-protect]-->
-  <!-- inject:css -->
-  <!-- endinject -->
-  <!--[/htmlclean-protect]-->
-  <!--<Deject>-->
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/animate.css">
-  <!--</Deject>-->
+<!--[htmlclean-protect]-->
+<!-- inject:css -->
+<!-- endinject -->
+<!--[/htmlclean-protect]-->
+<!--<Deject>-->
+<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/fonts.css">
+<link rel="stylesheet" href="css/animate.css">
+<link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+<!--</Deject>-->
 </head>
 
 
 <body>
-  <div id="registry-modal" class="modal">
-    <div class="modal-background"></div>
-    <div class="modal-content animated bounceIn">
-      <div class="notification is-link">
-        <button id="modal-close" class="delete"></button>
-        Your presence is present enough. Seriously. But for the stubborn among you, we simply ask that you don't bring boxed gifts
-        since we will be so far from home!
+<nav id="global-nav" class="navbar is-fixed-top is-transparent animated slideInDown">
+  <div class="container">
+    <div class="navbar-brand">
+      <a id="logo" class="navbar-item" href="index.html" :hover>
+        <strong class="logo">You are invited!</strong>
+      </a>
+      <div id="nav-toggle" class="navbar-burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <div id="main-menu" class="navbar-menu">
+      <div class="navbar-end">
+        <a class="menu-items-selected" href="couple.html">
+          <strong>The Couple</strong>
+        </a>
+        <a class="menu-items" href="schedule.html">
+          <strong>Schedule</strong>
+        </a>
+        <a class="menu-items" href="rsvp.html">
+          <strong>RSVP</strong>
+        </a>
+        <a class="menu-items" href="registry.html">
+          <strong>Registry</strong>
+        </a>
+        <a class="menu-items" href="faq.html">
+          <strong>FAQs</strong>
+        </a>
       </div>
     </div>
   </div>
-  <nav id="global-nav" class="navbar is-fixed-top is-transparent">
-    <div class="container">
-      <div class="navbar-brand">
-        <a id="logo" class="navbar-item" href="index.html">
-          <strong class="logo">Aditi & Mayank</strong>
-        </a>
-        <div id="nav-toggle" class="navbar-burger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </div>
-      <div id="main-menu" class="navbar-menu">
-        <div class="navbar-end">
-          <a class="navbar-item is-active" href="couple.html">
-            <strong class="tag is-size-6 is-link">The Couple</strong>
-          </a>
-          <a class="navbar-item" href="schedule.html">
-            <strong>Schedule</strong>
-          </a>
-          <a class="navbar-item" href="travel.html">
-            <strong>Travel & Accomodations</strong>
-          </a>
-          <a class="navbar-item" href="rsvp.html">
-            <strong>RSVP</strong>
-          </a>
-          <a class="navbar-item" id="registry-click">
-            <strong>Registry</strong>
-          </a>
-          <a class="navbar-item" href="faq.html">
-            <strong>FAQs</strong>
-          </a>
-        </div>
-      </div>
-    </div>
-  </nav>
+</nav>
 
   <section id="the-couple" class="hero quiz section is-fullheight">
     <div class="hero-body">
@@ -104,19 +100,19 @@
             <div class="box box-outer">
               <div id="question" class="field">
                 <strong>Question 1/9</strong>
-                <label id="real-question" class="label is-size-5">Where did Aditi and Mayank meet? </label>
+                <label id="real-question" class="label is-size-5">Where did Maya and Keshal meet? </label>
               </div>
               <progress id="progress" class="progress is-link is-small" value="0" max="100">0%</progress>
               <div class="field">
                 <p id="a5" class="control"></p>
                 <p id="a1" class="control">
                   <a class="box true">
-                    Winter break, Florida - cliché, we know
+                    Spring break, Miami - cliché, we know. It was amazing
                   </a>
                 </p>
                 <p id="a2" class="control">
                   <a class="box false">
-                    At Georgia Tech, obviously
+                    At Columbia University, obviously
                   </a>
                 </p>
                 <p id="a3" class="control">
@@ -126,7 +122,8 @@
                 </p>
                 <p id="a4" class="control">
                   <a class="box false">
-                    In the one Computer Science class Aditi took while at Georgia Tech. 
+                    In the one Anthropology class Keshal took while at Columbia. It was called "Magic, Witchcraft and Religion". He thought it
+                    "sounded cool".
                   </a>
                 </p>
               </div>
@@ -226,7 +223,7 @@
     </p>
     <div class="is-size-7">
       <center>
-        Designed & developed with love by Pritak
+        Designed & developed with love by Pratik
         <br> For any questions and/or concerns please email
         <a href="mailto:gatech.mayank@gmail.com">gatech.mayank@gmail.com</a>
       </center>
