--- a/index.html
+++ b/index.html
@@ -3,38 +3,38 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<!--   <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'GA_MEASUREMENT_ID');
-  </script> -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
+  </script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117162422-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
+
     gtag('config', 'UA-117162422-1');
-  </script>
+  </script> -->
 
 
 
-  <title>Aditi & Mayank</title>
+  <title>You are invited</title>
 
   <meta charset="utf-8">
   <meta property="og:title" content="You are invited" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://aditiandmayank.com" />
-  <meta property="og:description" content="The wedding of Aditi and Mayank" />
+  <meta property="og:description" content="Wedding website of Aditi and Mayank" />
   <meta property="og:image" content="" />
-  <!-- <meta property="fb:admins" content="prit4k" /> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta name="description" content="The wedding of Aditi and Mayank" />
-  <meta name="keywords" content="Wedding, Indian, Marriage, Wife, Husband">
-  <meta name="author" content="Aditi Gupta">
+  <meta name="description" content="Wedding website of Aditi and Mayank" />
+  <meta name="keywords" content="Wedding, Indian, Simple Indian Wedding, India, Wedding website, Indian Wedding website">
+  <meta name="author" content="Aditi Gupta and Mayank Agrawal">
 
 
   <!--[htmlclean-protect]-->
@@ -45,6 +45,9 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/animate.css">
+  <link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
   <!--</Deject>-->
 </head>
 
@@ -87,9 +90,7 @@
   <div id="main" class="hero is-fullheight animated fadeIn">
     <div id ="main-container">
       <div id="aditi-and-mayank">
-        <link href='http://fonts.googleapis.com/css?family=Arizonia' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+        
         <br> Aditi & Mayank</br>
         <div id="date-and-location">
           <br> May 30, 2020 | Providence, RI, USA</br>
@@ -97,7 +98,9 @@
       </div>
       <div id = "index_picture">
         <img src = "./images/index_take2.png"/>
+
       </div>
+      
     </div>
   </div>
 
